--- a/emprendimiento/formulario.html
+++ b/emprendimiento/formulario.html
@@ -64,22 +64,22 @@
      <h1 class="h1_form"> <strong>Ingreso a Ecodelcoco!  </strong> </h1>    
 
          <section class="form_bloque" >
-          <form class="form">
+          <form class="form" id="formulario">
             <div>
               <label for="exampleInputEmail1" class="form_email">Correo Electronico</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="email" class="form-control" id="correo" aria-describedby="emailHelp">
               <div id="emailHelp" class="form_info" style="display: flex; justify-content:center">No compartas esta informacion con nadie.</div>
             </div>
             <div>
               <label for="exampleInputPassword1" class="form_email">Contraseña</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <input type="password" class="form-control" id="contrasenia">
             </div>
             <div style="display: flex; justify-content:center">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label cclass="form_info" for="exampleCheck1">Recordarme</label>
+              <label class="form_info" for="exampleCheck1">Recordarme</label>
             </div>
             <div style="display: flex; justify-content:center">
-              <button type="submit" class="btn" style="background-color: rgba(25, 129, 103, 0.514); ">Ingresar</button>
+              <input type="submit" value="enviar" class="btn" style="background-color: rgba(25, 129, 103, 0.514)
             </div>
             
           </form>
@@ -122,5 +122,6 @@
     <script>
       AOS.init();
     </script>
+    <script src="../index.js"></script>
 </body>
 </html>
